--- a/GameHubCSharp/Views/Shared/_Layout.cshtml
+++ b/GameHubCSharp/Views/Shared/_Layout.cshtml
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="sticky-footer.css" rel="stylesheet">
+
     <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/index.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -23,11 +25,9 @@
             <partial name="_NavPartial" />
         </nav>
     </header>
-    <div class="container">
-        <main class="text-center" role="main">
-            @RenderBody()
-        </main>
-    </div>
+    <main class="text-center" role="main">
+        @RenderBody()
+    </main>
 
     <footer class="footer p-3 text-center mt-5" style="background-color:#1a031d38;">
         <div class="container">
