--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -9,10 +9,10 @@
     @if (!User.Identity.IsAuthenticated)
     {
         <li class="nav-item">
-            <a class="nav-link" style="color:rgb(255, 255, 255);" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link" style="color:rgb(255, 255, 255);"  asp-controller="User" asp-action="Login">Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" style="color:rgb(255, 255, 255);" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link" style="color:rgb(255, 255, 255);"  asp-controller="User" asp-action="Registration">Register</a>
         </li>
     }
         @if (User.Identity.IsAuthenticated)
@@ -21,7 +21,7 @@
                 <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="Add" asp-controller="GameEvent">Add Event</a>
             </li>
             <li class="nav-item">
-                <form  asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <form   asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                       method="post" id="logout">
                     <button id="logout-button" type="submit" class="nav-link" style="color:rgb(255, 255, 255);">
                         Log
