changed login functionality

--- a/GameHubCSharp/Views/User/Login.cshtml
+++ b/GameHubCSharp/Views/User/Login.cshtml
@@ -11,9 +11,9 @@
                 <div class="text-danger" asp-validation-summary="All"></div>
                 <label style="color: white;" for="validationServer01">UserName</label>
                 <div>
-                    <input asp-for="Username" class="form-control " required>
+                    <input asp-for="UserName" class="form-control " required>
 
-                    <span class="text-danger" asp-validation-for="Username"></span>
+                    <span class="text-danger" asp-validation-for="UserName"></span>
                     <div style="color: white;" class="valid-feedback">
 
                     </div>
