--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -21,7 +21,7 @@
                 <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="Add" asp-controller="GameEvent">Add Event</a>
             </li>
             <li class="nav-item">
-                <form   asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <form   asp-action="Logout" asp-controller="User"
                       method="post" id="logout">
                     <button id="logout-button" type="submit" class="nav-link" style="color:rgb(255, 255, 255);">
                         Log
