--- a/GameHubCSharp/Views/Home/Home.cshtml
+++ b/GameHubCSharp/Views/Home/Home.cshtml
@@ -5,7 +5,7 @@
     <div class=" w-100 text-center ">
 
         <div id="info-label">
-            <p style="color: greenyellow;font-size: 30px;" class="text-light">"Most popular game : @ViewData["mostPlayed"]"</p>
+            <p style="color: greenyellow;font-size: 30px;" class="text-light">Most popular game : @ViewData["mostPlayed"]</p>
         </div>
         <select onchange="reload(this.value)" class="browser-default " style="width: 15em;"
                 aria-placeholder="Filter"
