--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -1,35 +1,40 @@
-﻿@model GameHubCSharp.Data.Models.GameEvent
-@inject Microsoft.AspNetCore.Identity.UserManager<GameHubCSharp.Data.Models.User> manager 
+﻿@model GameHubCSharp.Models.View.GameEventViewModel
+
 
 <div style="margin-bottom: 100px;margin-top: 5%"
      class="btn-container-style text-center d-inline-block modal-dialog-scrollable outside-div">
     <div class="d-inline-block  text-left mt-5 container-style detail"
          style="background-image:url(@Model.Game.ImageUrl);">
         <div class="h-100 inside-el " style="opacity: 1;">
-            <div style="display: inline-block;width: 45%;height:70%;min-height: 12em">
-                <h6 style="font-size: 25px" text="Owner's nick : @Model.OwnerId" class="card-title">Card title</h6>
-                <p text="Devision : @Model.Devision" class="card-text"></p>
-                <p text="Players needed : @(Model.NumberOfPlayers + 1 - Model.Players.Count)" class="card-text"></p>
-                <p text="Starts on : @Model.StartDate" class="card-text"></p>
-                <p text="Ends on : @Model.DueDate" class="card-text"></p>
-                <p text="Description : @Model.Description" class="card-text"></p>
+            <div style="display: inline-block;width: 45%;height:70%;min-height: 19em">
+                <h6 style="font-size: 25px" class="card-title">Owner's nick : @Model.Owner.UsernameInGame</h6>
+                <p  class="card-text">Devision : @Model.Devision</p>
+                <p  class="card-text">Players needed : @(Model.NumberOfPlayers + 1 - Model.Players.Count)</p>
+                <p  class="card-text">Starts on : @Model.StartDate</p>
+                <p  class="card-text">Ends on : @Model.DueDate</p>
+                <p  class="card-text">Description : @Model.Description</p>
             </div>
             <div style="display: inline-block;width: 45%;height: 70%;vertical-align:top;" class="text-left">
                 <h6 style="font-size: 25px" class="card-text">Players for this event:</h6>
                 <ul>
                     @foreach (var player in Model.Players)
                     {
-                        <li style="font-size: 20px;" text="@player.UsernameInGame" class="card-text ml-4"></li>
+                    <li style="font-size: 20px;" class="card-text ml-4">@player.UsernameInGame</li>
                     }
                 </ul>
 
             </div>
-            @if (Model.OwnerId == manager.GetUserId(User))
+            @if (Model.Owner.Username == User.Identity.Name)
             {
 
                 <div style="position:relative;" id="last">
-                    <a href="/game/delete?id=@Model.Id" class="btn btn-primary border-0 bg-danger btn-lg mt-5 ml-3"
-                       style="padding: 0.23em;margin-bottom: 4.5px">Delete</a>
+                    <form  style="width:auto" asp-controller="GameEvent" asp-action="GameEventDelete">
+                        <input type="text" class="form-control is-invalid"
+                           asp-for="Id" value="@Model.Id" type="hidden"/>
+                      @*  <a href="/game/delete?id=@Model.Id" class="btn btn-primary border-0 bg-danger btn-lg mt-5 ml-3"
+                           style="padding: 0.23em;margin-bottom: 4.5px">Delete</a>*@
+                        <button class="btn btn-primary border-0 bg-danger btn-lg" type="submit">Delete</button>
+                    </form>
                 </div>
             }
             else if (Model.NumberOfPlayers + 1 - Model.Players.Count > 0)
@@ -37,7 +42,7 @@
 
                 <div style="position:relative;" id="last">
 
-                    <form class="mt-5 text-left form-event" action="/game/add/player?id=@Model.Id" method="POST">
+                    <form class="mt-5 text-left form-event" action="/game/add/player?name=@User.Identity.Name" method="POST">
                         <div th:if="${taken!=null}">
                             <small th:text="${taken}" style="color: #ff0000;font-size:15px;margin-left: 5%"></small>
                         </div>
