--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -8,18 +8,18 @@
         <div class="h-100 inside-el " style="opacity: 1;">
             <div style="display: inline-block;width: 45%;height:70%;min-height: 19em">
                 <h6 style="font-size: 25px" class="card-title">Owner's nick : @Model.Owner.UsernameInGame</h6>
-                <p  class="card-text">Devision : @Model.Devision</p>
-                <p  class="card-text">Players needed : @(Model.NumberOfPlayers + 1 - Model.Players.Count)</p>
-                <p  class="card-text">Starts on : @Model.StartDate</p>
-                <p  class="card-text">Ends on : @Model.DueDate</p>
-                <p  class="card-text">Description : @Model.Description</p>
+                <p class="card-text">Devision : @Model.Devision</p>
+                <p class="card-text">Players needed : @(Model.NumberOfPlayers + 1 - Model.Players.Count)</p>
+                <p class="card-text">Starts on : @Model.StartDate</p>
+                <p class="card-text">Ends on : @Model.DueDate</p>
+                <p class="card-text">Description : @Model.Description</p>
             </div>
             <div style="display: inline-block;width: 45%;height: 70%;vertical-align:top;" class="text-left">
                 <h6 style="font-size: 25px" class="card-text">Players for this event:</h6>
                 <ul>
                     @foreach (var player in Model.Players)
                     {
-                    <li style="font-size: 20px;" class="card-text ml-4">@player.UsernameInGame</li>
+                        <li style="font-size: 20px;" class="card-text ml-4">@player.UsernameInGame</li>
                     }
                 </ul>
 
@@ -28,11 +28,11 @@
             {
 
                 <div style="position:relative;" id="last">
-                    <form  style="width:auto" asp-controller="GameEvent" asp-action="GameEventDelete">
+                    <form style="width:auto" asp-controller="GameEvent" asp-route-pesho="123" asp-action="GameEventDelete" method="post">
                         <input type="text" class="form-control is-invalid"
-                           asp-for="Id" value="@Model.Id" type="hidden"/>
-                      @*  <a href="/game/delete?id=@Model.Id" class="btn btn-primary border-0 bg-danger btn-lg mt-5 ml-3"
-                           style="padding: 0.23em;margin-bottom: 4.5px">Delete</a>*@
+                               asp-for="Id" value="@Model.Id" type="hidden" />
+                        @*  <a href="/game/delete?id=@Model.Id" class="btn btn-primary border-0 bg-danger btn-lg mt-5 ml-3"
+                            style="padding: 0.23em;margin-bottom: 4.5px">Delete</a>*@
                         <button class="btn btn-primary border-0 bg-danger btn-lg" type="submit">Delete</button>
                     </form>
                 </div>
@@ -42,18 +42,25 @@
 
                 <div style="position:relative;" id="last">
 
-                    <form class="mt-5 text-left form-event" action="/game/add/player?name=@User.Identity.Name" method="POST">
-                        <div th:if="${taken!=null}">
-                            <small th:text="${taken}" style="color: #ff0000;font-size:15px;margin-left: 5%"></small>
-                        </div>
+                    <form class="mt-5 text-left form-event" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
+                          method="POST">
                         <div class="text-left">
                             <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
                         </div>
+                        <input type="text" class="form-control is-invalid"
+                               asp-for="Id" value="@Model.Id" name="gameEventId" type="hidden" />
                         <input style="margin-left: 5%;width: 70%; margin-bottom: 4%" type="text" name="userNick" id="username"
                                class="form-control is-invalid d-inline-block"
                                aria-describedby="validatedInputGroupPrepend"
                                required>
+
                         <button class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3" type="submit">I'm in</button>
+                        @if ((bool?)ViewData["valid"] != true)
+                        {
+                            <div class="invalid-feedback">
+                                <span style="color: #ff0000;font-size:15px;margin-left: 5%;">This nickname is already takken for this event.</span>
+                            </div>
+                        }
                     </form>
                 </div>
             }
