--- a/GameHubCSharp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/GameHubCSharp/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model LoginModel
+@model GameHubCSharp.Controllers.LoginViewModel
 
 
 <div class="text-center" style="margin-top: 5%;">
@@ -12,9 +12,9 @@
                 <div class="text-danger" asp-validation-summary="All"></div>
                 <label style="color: white;" for="validationServer01">UserName</label>
                 <div>
-                    <input asp-for="Input.Email"  class="form-control " required>
-                    
-                    <span class="text-danger" asp-validation-for="Input.Email"></span>
+                    <input asp-for="UserName" class="form-control " required>
+
+                    <span class="text-danger" asp-validation-for="UserName"></span>
                     <div style="color: white;" class="valid-feedback">
 
                     </div>
@@ -22,11 +22,15 @@
             </div>
             <div class="col-md-12 col-md-6 mb-3 d-inline-block" style="display: inline-block;">
                 <label style="color: white;">Password</label>
-                <input asp-for="Input.Password" class="form-control " required>
-                <span class="text-danger" asp-validation-for="Input.Password"></span>
+                <input asp-for="Password" class="form-control " required>
+                <span class="text-danger" asp-validation-for="Password"></span>
 
             </div>
 
+            <div class="col-md-12 col-md-6 mb-3 d-inline-block text-left mt-2" style="display: inline-block;">
+                <input asp-for="RememberMe" />
+                <label style="color: forestgreen;">Remember me</label>
+            </div>
 
         </div>
         <button class="btn btn-primary border-0 bg-dark btn-lg" type="submit">Login</button>
