--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -20,12 +20,31 @@
         if (User.IsInRole("Admin"))
         {
             <li class="nav-item">
-                <p class="card-text">Admin : @User.Identity.Name</p>
+                <p class="card-text" style="color:#9fea92; font-size:1rm; padding:.5rem 1rem; font-weight: bold;font-family:" -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji""">
+                    Admin : @User.Identity.Name
+                </p>
+            </li>
+            <li class="nav-item">
+
+                
+            </li>
+            <li class="nav-item">
+
+              
+            </li>
+            <li class="nav-item">
+
+            </li>
+            <li class="nav-item">
+
                 <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="AdminHome" asp-controller="Admin">Admin Home</a>
             </li>
         }
         <li class="nav-item">
-            <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="News" asp-controller="Admin">News</a>
+            <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="News" asp-controller="Home">News</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="Home" asp-controller="Home">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" style="color:rgb(255, 255, 255);" asp-action="GameEventAdd" asp-controller="GameEvent">Add Event</a>
