--- a/GameHubCSharp/Views/Admin/AdminHome.cshtml
+++ b/GameHubCSharp/Views/Admin/AdminHome.cshtml
@@ -1,5 +1,99 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using GameHubCSharp.Models.View
+@model AdminHomeViewModel
+
+<div class=" d-block text-center">
+    <form class="d-inline-block mb-2" id="account" method="POST" asp-action="AddGame" asp-controller="Admin">
+        <div>
+            <div class="col-md-12 col-md-6 mb-3 d-inline-block" style="display: inline-block;">
+                <div class="text-danger" asp-validation-summary="All"></div>
+                <label style="color: white;">GameName</label>
+                <div>
+                    <input asp-for="GameViewModel.GameName" class="form-control ">
+                </div>
+                <label style="color: white;">ImageUrl</label>
+                <div>
+                    <input asp-for="GameViewModel.ImageUrl" class="form-control ">
+                </div>
+            </div>
+        </div>
+<button class="btn btn-primary border-0 bg-dark btn-lg" type="submit">AddGame</button>
+    </form >
+</div>
+
+<select class="browser-default " style="width: 15em;"
+        aria-placeholder="Filter"
+        id="category"
+        name="category"
+        onchange="filter(this.value)">
+
+    <option text="User" value="User">User</option>
+    <option text="GameEvent" value="GameEvent">GameEvent</option>
+
+
+</select>
+<table id="u" class="table table-dark container mt-4" style="">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">id</th>
+            <th scope="col">name</th>
+            <th scope="col">function</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int i = 0; i < Model.Users.ToList().Count; i++)
+        {
+            var cur = Model.Users.ToList()[i];
+
+            <tr>
+                <th scope="row">@i</th>
+                <td>@cur.Id</td>
+                <td>@cur.UserName</td>
+                <td><button id="logout-button" class="bg-danger text-white p-2" onclick="location.href = '/Admin/DeleteUser/@cur.Id'">Delete</button></td>
+
+            </tr>
+        }
+    </tbody>
+</table>
+<table id="g" class="table table-dark container mt-4" style="">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">id</th>
+            <th scope="col">Event game name</th>
+            <th scope="col">function</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int i = 0; i < Model.GameEvents.ToList().Count; i++)
+        {
+            var cur = Model.GameEvents.ToList()[i];
+
+            <tr>
+                <th scope="row">@i</th>
+                <td>@cur.Id</td>
+                <td>@cur.Game.GameName</td>
+                <td><button id="logout-button" class="bg-danger text-white p-2" onclick="location.href = '/Admin/DeleteEvent/@cur.Id'">Delete</button></td>
+
+            </tr>
+        }
+    </tbody>
+</table>
+
+<script>
+
+    function filter(val) {
+        console.log(val)
+        if (val == "User") {
+
+            document.getElementById("u").style.display = "table";
+            document.getElementById("g").style.display = "none";
+        }
+
+        if (val == "GameEvent") {
+            document.getElementById("g").style.display = "table";
+            document.getElementById("u").style.display = "none";
+        }
+    }
+    filter("User")
+</script>
