News page added

--- a/GameHubCSharp/Views/Home/Home.cshtml
+++ b/GameHubCSharp/Views/Home/Home.cshtml
@@ -28,7 +28,7 @@
     </div>
 
 </div>
-
+<a id="back-to-top" href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-1x"></i></a>
 <script>
     function reload(gameName) {
         fetch('https://localhost:44348/resource?game=' + gameName, {
