--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -1,1 +1,140 @@
-﻿@model GameHubCSharp.Models.View.PostViewModel
+﻿@using GameHubCSharp.Models.View
+<div class="container">
+
+    <div class="row">
+
+        <!-- Blog Entries Column -->
+        <div class="col-md-8" style="margin-bottom:5rem;height:100%">
+
+            <h1 class="my-4 " style="color:white">
+                Breaking News
+
+            </h1>
+
+            <!-- Blog Post -->
+            @foreach (PostViewModel post in (List<PostViewModel>)ViewData["Posts"])
+            {
+                <div class="card mb-4">
+                    <img class="card-img-top" src="@Model.ImageUrl" alt="@Model.ImageUrl">
+                    <div class="card-body">
+                        <h2 class="card-title">@Model.Topic</h2>
+                        <p class="card-text">@Model.Text</p>
+                        <a href="#" class="btn btn-primary">Read More →</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        @Model.CreatedAt
+                        <a href="#">Start Bootstrap</a>
+                    </div>
+                </div>
+            }
+
+            <!-- Pagination -->
+            <ul class="pagination justify-content-center mb-4" >
+                <li class="page-item" >
+                    <a class="page-link" style="background-color: #0e3a88be;;color:white" href="#">← Older</a>
+                </li>
+                <li class="page-item disabled" >
+                    <a class="page-link" style="background-color: #0e3a88be;color:white" href="#">Newer →</a>
+                </li>
+            </ul>
+
+        </div>
+
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+
+            <!-- Search Widget -->
+            <!--<div class="card my-4">
+        <h5 class="card-header">Search</h5>
+        <div class="card-body">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-append">
+                    <button class="btn btn-secondary" type="button">Go!</button>
+                </span>
+            </div>
+        </div>
+    </div>-->
+            <!-- Categories Widget -->
+            <div class="card my-4 mt-5" style="text-align: center;margin-top:2rem; border-radius: 12px;border: 2px solid;background-color: #3b0d41bf;">
+                <h5 class="card-header" style="color:white">Categories</h5>
+                <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled mb-0" style="">
+                                <li>
+                                    <a href="#">Web Design</a>
+                                </li>
+                                <li>
+                                    <a href="#">HTML</a>
+                                </li>
+                                <li>
+                                    <a href="#">Freebies</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul class="list-unstyled mb-0">
+                                <li>
+                                    <a href="#">JavaScript</a>
+                                </li>
+                                <li>
+                                    <a href="#">CSS</a>
+                                </li>
+                                <li>
+                                    <a href="#">Tutorials</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Side Widget -->
+            <div class="card  mt-5"
+                 style="text-align: center;margin-bottom:5rem;  border-radius: 12px;border: 2px solid;background-color: #324870be;">
+                <h5 class="card-header" style="color:white">Side Widget</h5>
+                <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
+                    <p style="color:white">You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!</p>
+                </div>
+            </div>
+            <div class="card  mt-2"
+                 style="text-align: center;margin-bottom:5rem;  border-radius: 12px;border: 2px solid;background-color: #324870be;">
+                <h5 class="card-header" style="color:white">Side Widget</h5>
+                <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
+                    <p style="color:white">You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!</p>
+                </div>
+            </div>
+            <div class="card  mt-2"
+                 style="text-align: center;margin-bottom:5rem;  border-radius: 12px;border: 2px solid;background-color: #324870be;">
+                <h5 class="card-header" style="color:white">Side Widget</h5>
+                <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
+                    <p style="color:white">You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!</p>
+                </div>
+            </div>
+            <div class="card  mt-2"
+                 style="text-align: center;margin-bottom:5rem;  border-radius: 12px;border: 2px solid;background-color: #324870be;">
+                <h5 class="card-header" style="color:white">Side Widget</h5>
+                <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
+                    <p style="color:white">You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!</p>
+                </div>
+            </div>
+            <div class="card  mt-5"
+                 style="text-align: center;margin-bottom:5rem;  border-radius: 12px;border: 2px solid;background-color: #324870be;">
+                <h5 class="card-header" style="color:white">Side Widget</h5>
+                <div class="card-body" style="width: 100%;background-color: #0d1626be;border-radius: 12px;border: 2px solid;">
+                    <p style="color:white">You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!</p>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <!-- /.row -->
+
+</div>
+<a id="back-to-top"  href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-1x"></i></a>
+<script>
+
+
+</script>
