top  button size fix

--- a/GameHubCSharp/Views/Home/News.cshtml
+++ b/GameHubCSharp/Views/Home/News.cshtml
@@ -133,7 +133,7 @@
     <!-- /.row -->
 
 </div>
-<a id="back-to-top"  href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-1x"></i></a>
+<a id="back-to-top"  href="#" class="btn btn-light btn-lg back-to-top" role="button"><i style="color:white" class="far fa-arrow-alt-circle-up fa-lg"></i></a>
 <script>
 
 
