--- a/GameHubCSharp/Views/Admin/AdminHome.cshtml
+++ b/GameHubCSharp/Views/Admin/AdminHome.cshtml
@@ -20,6 +20,34 @@
     </form>
 </div>
 
+<div class=" d-block text-center">
+    <form class="d-inline-block mb-2" id="account" method="POST" asp-action="AddPost" asp-controller="Admin">
+        <div>
+            <div class="col-md-12 col-md-6 mb-3 d-inline-block" style="display: inline-block;">
+                <div class="text-danger" asp-validation-summary="All"></div>
+                <label asp-for="Post.Topic" style="color: white;"></label>
+                <div>
+                    <input asp-for="Post.Topic" class="form-control ">
+                </div>
+                <label asp-for="Post.ImageUrl" style="color: white;"></label>
+                <div>
+                    <input asp-for="Post.ImageUrl" class="form-control ">
+                </div>
+                <label asp-for="Post.Link" style="color: white;"></label>
+                <div>
+                    <input asp-for="Post.Link" class="form-control ">
+                </div>
+                <label asp-for="Post.Text" style="color: white;"></label>
+                <div>
+                    <input asp-for="Post.Text" class="form-control ">
+                </div>
+
+            </div>
+        </div>
+        <button class="btn btn-primary border-0 bg-dark btn-lg" type="submit">AddPost</button>
+    </form>
+</div>
+
 <select class="browser-default " style="width: 15em;"
         aria-placeholder="Filter"
         id="category"
@@ -28,6 +56,7 @@
 
     <option text="User" value="User">User</option>
     <option text="GameEvent" value="GameEvent">GameEvent</option>
+    <option text="Game" value="Game">Game</option>
 
 
 </select>
@@ -55,7 +84,7 @@
         }
     </tbody>
 </table>
-<table id="g" class="table table-dark container mt-4" style="">
+<table id="ge" class="table table-dark container mt-4" style="">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -79,19 +108,50 @@
         }
     </tbody>
 </table>
+<table id="g" class="table table-dark container mt-4" style="">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">id</th>
+            <th scope="col">name</th>
+            <th scope="col">function</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int i = 0; i < Model.Games.ToList().Count; i++)
+        {
+            var cur = Model.Games.ToList()[i];
+
+            <tr>
+                <th scope="row">@i</th>
+                <td>@cur.Id</td>
+                <td>@cur.GameName</td>
+                <td><button id="logout-button" class="bg-danger text-white p-2" onclick="location.href = '/Admin/DeleteGame/@cur.Id'">Delete</button></td>
+
+            </tr>
+        }
+    </tbody>
+</table>
 
 <script>
 
     function filter(val) {
         console.log(val)
         if (val == "User") {
-
-            document.getElementById("u").style.display = "table";
             document.getElementById("g").style.display = "none";
+            document.getElementById("u").style.display = "table";
+            document.getElementById("ge").style.display = "none";
         }
 
         if (val == "GameEvent") {
+            document.getElementById("g").style.display = "none";
+            document.getElementById("ge").style.display = "table";
+            document.getElementById("u").style.display = "none";
+        }
+
+        if (val == "Game") {
             document.getElementById("g").style.display = "table";
+            document.getElementById("ge").style.display = "none";
             document.getElementById("u").style.display = "none";
         }
     }
