--- a/GameHubCSharp/Views/Admin/AdminHome.cshtml
+++ b/GameHubCSharp/Views/Admin/AdminHome.cshtml
@@ -50,7 +50,7 @@
                 </div>
                 <label asp-for="Post.Text" style="color: white;"></label>
                 <div>
-                    <input asp-for="Post.Text" class="form-control ">
+                    <textarea asp-for="Post.Text"  class="form-control "></textarea>
                 </div>
 
             </div>
