--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -11,6 +11,7 @@
         <li class="nav-item">
             <a class="nav-link" style="color:rgb(255, 255, 255);" asp-controller="User" asp-action="Login">Login</a>
         </li>
+
         <li class="nav-item">
             <a class="nav-link" style="color:rgb(255, 255, 255);" asp-controller="User" asp-action="Registration">Register</a>
         </li>
@@ -18,6 +19,9 @@
     }
     @if (User.Identity.IsAuthenticated)
     {
+        <li>
+            <i style="color:white;padding-top:0.8rem;" class="nav-link active far fa-bell fa-lg"></i>
+        </li>
         if (User.IsInRole("Admin"))
         {
 
