--- a/GameHubCSharp/Views/Admin/AdminHome.cshtml
+++ b/GameHubCSharp/Views/Admin/AdminHome.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GameHubCSharp.Models.View
 @model AdminHomeViewModel
 
-    <select class="browser-default " style="width: 15em;"
+    <select class="browser-default mt-2" style="width: 15em;"
             aria-placeholder="Filter"
             id="category"
             name="category"
@@ -71,7 +71,7 @@
 
 
 </select>
-<section class="mb-4">
+<section class="mb-4 pb-5">
     <table id="u" class="table table-dark container mt-4 mb-4" style="">
         <thead>
             <tr>
