--- a/GameHubCSharp/Views/Shared/_NavPartial.cshtml
+++ b/GameHubCSharp/Views/Shared/_NavPartial.cshtml
@@ -9,7 +9,7 @@
         <ul class="navbar-nav ml-auto ">
             <li class="nav-item avatar dropdown">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink-5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span class="badge badge-danger ml-2">4</span>
+                    <span id="counter" class="badge badge-danger ml-2">0</span>
                     <i style="color:white;padding-top:0.8rem;" class="nav-link active far fa-bell fa-lg d-inline-block"></i>
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg-right dropdown-secondary" aria-labelledby="navbarDropdownMenuLink-5">
@@ -40,7 +40,7 @@
         {
 
             <li class="nav-item">
-                <p class="card-text" style="color:#9fea92; font-size:1rm; padding:.5rem 1rem; font-weight: bold;font-family:" -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji""">
+                <p id="sendButton" class="card-text" style="color:#9fea92; font-size:1rm; padding:.5rem 1rem; font-weight: bold;font-family:" -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji""">
                     Admin : @User.Identity.Name
                 </p>
             </li>
