--- a/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
+++ b/GameHubCSharp/Views/GameEvent/GameEventDetail.cshtml
@@ -40,35 +40,35 @@
             else if (Model.NumberOfPlayers + 1 - Model.Players.Count > 0)
             {
 
-                <div style="position:relative;" id="last">
+        <div style="position:relative;" id="last">
 
-                    <form class="mt-5 text-left form-event" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
-                          method="POST">
-                        <div class="text-left">
-                            <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
-                        </div>
-                        <input type="text" class="form-control is-invalid"
-                               asp-for="Id" value="@Model.Id" name="gameEventId" type="hidden" />
-                        <input style="margin-left: 5%;width: 70%; margin-bottom: 4%" type="text" name="userNick" id="username"
-                               class="form-control is-invalid d-inline-block"
-                               aria-describedby="validatedInputGroupPrepend"
-                               required>
-
-                        <button class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3" type="submit">I'm in</button>
-                        @if ((bool?)ViewData["valid"] != true)
-                        {
-                            <div class="invalid-feedback">
-                                <span style="color: #ff0000;font-size:15px;margin-left: 5%;">This nickname is already takken for this event.</span>
-                            </div>
-                        }
-                    </form>
+            <form class="mt-5 text-left form-event" asp-controller="GameEvent" asp-action="GameEventAddPlayer"
+                  method="POST">
+                <div class="text-left">
+                    <p style="color: lawngreen; margin-left: 5%" class="card-text mb-3">Your nick name :</p>
                 </div>
+                <input type="text" class="form-control is-invalid"
+                       asp-for="Id" value="@Model.Id" name="gameEventId" type="hidden" />
+                <input style="margin-left: 5%;width: 70%; margin-bottom: 4%" type="text" name="userNick" id="username"
+                       class="form-control is-invalid d-inline-block"
+                       aria-describedby="validatedInputGroupPrepend"
+                       required>
+
+                <button id="joinEvent" onclick="mafunc()" class="btn btn-primary border-0 mb-1 bg-dark mr-2 btn-lg ml-3" type="submit">I'm in</button>
+                @if ((bool?)ViewData["valid"] != true)
+                {
+                    <div class="invalid-feedback">
+                        <span style="color: #ff0000;font-size:15px;margin-left: 5%;">This nickname is already takken for this event.</span>
+                    </div>
+                }
+            </form>
+        </div>
             }
 
         </div>
     </div>
 </div>
-
+<script>let roomid = "@Model.Id"</script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
